--- a/Logistic Regression/Normalized Logistic Regression.ipynb
+++ b/Logistic Regression/Normalized Logistic Regression.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -405,7 +407,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sigmoid = lambda z: 1 / (1 + np.exp(-z))\n",
@@ -474,14 +478,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from scipy import optimize as opt\n",
     "res = opt.fmin_tnc(func=cost, x0=theta, fprime=gradient, args=(X, y, lam))  \n",
     "h = np.matrix(res[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
