SVM Spam Filter

--- a/Support Vector Machines/Support Vector Machines.ipynb
+++ b/Support Vector Machines/Support Vector Machines.ipynb
@@ -17,7 +17,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np  \n",
@@ -147,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "raw_data = loadmat('ex6data2.mat')\n",
@@ -192,7 +196,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def fit_svm(X, y, C=1):\n",
@@ -305,7 +311,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "raw_data = loadmat('ex6data3.mat')\n",
@@ -328,7 +336,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gamma_val = [0.01, 0.03, 0.1, 0.3, 1, 3, 10, 30, 100]\n",
@@ -382,7 +392,7 @@
     "SVM_x = gaus_svm.decision_function(X_val)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(12,8))  \n",
-    "ax.scatter(X_val[:, 0], X_val[:,1], s=20, c=SVM_x, cmap='seismic')  \n",
+    "ax.scatter(X_val[:, 0], X_val[:, 1], s=20, c=SVM_x, cmap='seismic')  \n",
     "ax.set_title('Optimum SVM Parameters') "
    ]
   },
